tasks/theme/sldocs.css
/* ... */
/* For screens below 600px (mobile) */
@media only screen and (max-width: 650px) {
  .ftrlegal{
    padding: 16px 0px;
    row-gap: 0px;
    flex-direction: column;
  }
  .footer_top{
    flex-direction: column;
  }
  .footer_top >div:first-child{
    width: 100%;
    padding: 0px 16px 8px 16px;
    border-bottom: 1px solid rgba(217, 217, 217, 0.3);
    font-size: 14px;
  }
  .footer_top >div:first-child >a:first-child{
    width: 20px;
    height: 20px;
  }
  .footer_top >div:first-child >a:first-child img{
    width: 20px;
    height: 20px;
  }
  .footer_top >div:first-child >a:last-child{
    font-size: 14px;
    height: 20px;
  }
  .footer_top >div:last-child{
    width: 100%;
    flex-direction: column;
  }
  .footer_top >div:last-child >ul:first-child{
    width: 100%;
    row-gap: 4px;
    padding: 8px 16px;
    border-bottom: 1px solid rgba(217, 217, 217, 0.3);
    font-size: 12px;
  }
  .footer_top >div:last-child >ul:first-child li:not(:first-child){
    padding-left: 8px;
  }
  .footer_top >div:last-child >ul:last-child li:not(:first-child){
    padding-left: 8px;
  }
  .footer_top >div:last-child >ul:first-child li{
    font-size: 12px;
  }
  .footer_top >div:last-child >ul:first-child > li:first-child{
    font-size: 12px;
  }
  .footer_top >div:last-child >ul:last-child > li:first-child{
    font-size: 12px;
  }
  .footer_top >div:last-child >ul:last-child li{
    font-size: 12px;
  }
  .footer_top >div:last-child >ul:last-child{
    width: 100%;
    row-gap: 4px;
    padding: 8px 16px;
    font-size: 12px;
  }
  .footer_top >ul:first-child li{
    font-size: 10px;
    /* padding: 10px 10px; */
  }
  .footer_top >div:last-child >ul:last-child > li:first-child>span:last-child{
    display: flex;
    align-items: center;
  }
  .footer_top >div:last-child >ul:first-child > li:first-child>span:last-child{
    display: flex;
    align-items: center;
  }
  .footer_bottom >ul:last-child >li{
    padding-top: 10px;
  }
  .footer_bottom >ul:last-child ul{
    flex-direction: column;
  }
  .footer_bottom >ul:last-child  li {
    font-size: 10px;
  }
  .footer_bottom >ul ul li >a:first-child img{
    width: 17px;
    height: auto;
    vertical-align: middle;
  }
  .footer a[rel*="external"]::after {
    width: 14px;
    height: 14px;
    margin-left: 3px;
  }
  .copyright{
    font-size: 10px;
    padding: 0px 0px 0px 4px;
  }
  .footer-site-title{
    font-size: 14px;
  }
  .footer_top > ul:first-child{
    flex-direction: column;
  }
  .footer_bottom{
    padding: 0px;
    flex-direction:column-reverse;
  }
  .footer_bottom >ul:last-child{
    padding: 8px 16px 0px 16px;
  }
  .footer_bottom >ul:last-child >li:first-child{
    padding-left: 0px;
  }
  .footer_bottom >ul:first-child {
    padding: 4px 16px 0px 16px;
  }
  .footer_bottom >ul:first-child >li{
    font-size: 10px;
  }
  footer .newsbanner{
    padding: 5px 10px;
  }
}

/* ==============================
   Scrolling
   ============================== */

main{
  margin: 0;
  padding: 28px 0px;
  /* height: 100vh;   */
  /* must be vh for scrolling to work */
  overflow-y: scroll;
  scrollbar-width: thin;  /* Firefox */
  scrollbar-color: var(--SL-grey03) var(--SL-grey01);
  -ms-overflow-style: none;  /* IE and Edge */
}

nav.toc > ul {
  margin: 0;
  padding-top: 0 !important;
  width: calc(100% - 2px);
  padding-bottom: 2.5em !important;
  font-size: 14px;
}
html{
  scrollbar-width: none;
 -ms-overflow-style: none;
}
html::-webkit-scrollbar {
  width: 4px !important;
}
/* html::-webkit-scrollbar-thumb {
  background-color: var(--c2-grey9);
  border-radius: 4px;
}
html::-ms-scrollbar-thumb {
  background-color: var(--c2-grey10);
  border-radius: 4px;
}
html::-webkit-scrollbar-track{
  background-color: var(--c2-grey10);
} */
/* Hide scrollbar in IE and Edge */
nav.toc, main,body::-ms-scrollbar{
  display: none;
}
/* For Chrome */
main {
  scrollbar-width: thin;
}
main::-webkit-scrollbar{
  width: 4px !important;
}

/* Webkit browsers (Chrome, Safari) */
nav.toc::-webkit-scrollbar {
  width: 4px !important;
}

nav.toc::-webkit-scrollbar-track {
  background: var(--SL-grey01);
}

nav.toc::-webkit-scrollbar-thumb {
  background-color: var(--SL-grey02);
  border-radius: 10px;
  border: 0.5px solid var(--SL-grey01);
}

/* Hide scrollbar for IE and Edge */
nav.toc::-ms-overflow-style {
  -ms-overflow-style: none;
}
/* nav.toc::-webkit-scrollbar-thumb, main::-webkit-scrollbar-thumb{
  background-color: var(--c2-grey9); 
}
nav.toc::-webkit-scrollbar-track, main::-webkit-scrollbar-track{
  background-color: var(--c2-grey10);
} */

/* ==============================
   Side navigation (nav.toc and .sidebar)
   ============================== */

.sidebar{
  position: absolute;
  right: 10px;
  margin: 0;
  padding: 0;
  color: var(--nav-textcolor);
  width: 15%;
  height: 100%;
  padding-bottom: 200px;
  overflow-y: scroll;
  scrollbar-width: none;
  /* z-index: 1; */
}
nav.toc {
  position: sticky;
  margin: 0;
  color: var(--nav-textcolor);
  width: 100%;
  z-index: 2;
  transition-timing-function: linear;
  overflow-y: auto;
  height: calc(100vh - var(--hdr-height));
  scrollbar-width: thin;
  scrollbar-color: var(--SL-grey03) var(--SL-grey01);
  -ms-overflow-style: none;
}
.sidebar  {
  background: var(--sidebar-bgcolor);
}
nav.toc ,.sidenav_element {
  background: #ffffff;
}

/* .sidebar > ul > li, */
nav.toc > ul > li ,.sidenav_element >ul > li{
  display: block;  /* always display the first level */
  margin-top: 4px;
  padding-bottom: 4px;
}
/* .sidebar > ul > li li, */
nav.toc > ul > li li,.sidenav_element >ul >li li {
  display: none;  /* initially hide the lower levels */
}
/* .sidebar > ul > li > span, */
/* .sidebar > ul > li > a, */
nav.toc > ul > li > span,
nav.toc > ul > li > a ,.sidenav_element > ul > li > span,
.sidenav_element > ul > li > a {
  font-size: 13px;
  line-height: 22px;
  font-weight: 400;
  padding-left: 16px;
  color: #26282C;
  align-items: center;
}

/* .sidebar ul, */
 nav.toc ul  { padding: 0; }
/* ... */

